--- a/styles.css
+++ b/styles.css
@@ -45,36 +45,138 @@
     background: rgba(11, 2, 35, 0.1);
     text-decoration: none;
 }
-.nav-youtube{
+
+.nav-youtube {
     padding-left: 10px;
-  
+
 }
-.nav-tiktok{
+
+.nav-tiktok {
     padding-left: 10px;
 }
 
 /* header section */
-.header-container{
+.header-container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 40px;
     background-image: url('images/Group\ 14.png');
     background-repeat: no-repeat;
-   
+    align-items: center;
+
+
 }
-.header-img img{
-    width: 450px;
+
+.header-img img {
+    width: 500px;
+    padding-right: 100px;
 }
-.header-description{
- margin-left: 150px;
-   
-   
+
+.header-description {
+    margin-left: 180px;
+
 }
-.goat{
+
+.header-description h2 {
+    font-size: 30px;
+    margin-bottom: 16px;
+
+}
+
+.header-description p {
+    font-size: 17px;
+    margin: 10px;
+}
+
+
+.goat {
     font-size: 95px;
     color: rgb(135, 88, 241);
-font-weight: 800;
-font-size: 50px;
-font-weight: 800;
+    font-weight: bolder;
+    font-size: 50px;
+    font-weight: 800;
+    /* background: linear-gradient(180.00deg, rgb(249, 72, 178), rgb(135, 88, 241));
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text; */
+
 }
+
+.header-btn {
+    margin-top: 30px;
+
+}
+
+.header-btn-1 {
+    padding: 15px 35px;
+    border: none;
+    border-radius: 40px;
+    color: white;
+    background: rgb(255, 66, 165);
+    margin-right: 18px;
+}
+
+.header-btn-2 {
+    padding: 15px 35px;
+    border: none;
+    border-radius: 40px;
+    color: white;
+    background: rgb(78, 197, 247);
+}
+
+
+
+
+
+/* .banner {
+    padding: 10px 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    max-width: 1400px;
+    margin: 0 auto;
+    margin-top: 2vw;
+    height: auto;
+    background-color: rgba(112, 128, 144, 0.178);
+  }
+  .banner-text {
+    width: 100%;
+    text-align: center;
+  }
+  .banner-text h1 {
+    font-size: 50px;
+    background-image: linear-gradient(to bottom, #9376e0, #e893cf);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    margin-bottom: -20px;
+  }
+  .banner-text p {
+    font-size: 35px;
+    font-family: "Dancing Script", cursive;
+  }
+  .banner-image {
+    width: 100%;
+    margin-top: 10px;
+  }
+  .banner-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+  .social-media {
+    font-size: 40px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: -10px;
+    margin-bottom: 15px;
+  }
+  .button-container {
+    display: flex;
+    justify-content: space-around;
+  }
+  .banner .button-container button {
+    background-color: transparent;
+    border: 2px solid #9376e0;
+    padding: 10px 25px;
+    border-radius: 5px;
+  } */
