--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     justify-content: space-around;
     align-items: center;
     padding: 16px;
-    background-color: rgb(233, 241, 241);
+    background-color: rgb(204, 187, 187);
 }
 
 .nav-logo {
@@ -58,22 +58,25 @@
 /* header section */
 .header-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     background-image: url('images/Group\ 14.png');
     background-repeat: no-repeat;
     align-items: center;
+}
+
+.header-img {
+    width: 500px;
 
 
 }
 
 .header-img img {
-    width: 500px;
-    padding-right: 100px;
+    width: 100%;
+    margin-right: 100px;
 }
 
 .header-description {
-    margin-left: 180px;
-
+    margin-left: 150px;
 }
 
 .header-description h2 {
@@ -122,61 +125,113 @@
     background: rgb(78, 197, 247);
 }
 
-
-
-
-
-/* .banner {
-    padding: 10px 10px;
-    border-radius: 10px;
+/* second container */
+.second-container {
     display: flex;
-    flex-direction: column;
-    max-width: 1400px;
-    margin: 0 auto;
-    margin-top: 2vw;
-    height: auto;
-    background-color: rgba(112, 128, 144, 0.178);
-  }
-  .banner-text {
-    width: 100%;
-    text-align: center;
-  }
-  .banner-text h1 {
-    font-size: 50px;
-    background-image: linear-gradient(to bottom, #9376e0, #e893cf);
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    margin-bottom: -20px;
-  }
-  .banner-text p {
+    justify-content: center;
+    align-items: center;
+    text-align: end;
+    padding: 30px;
+    background-color: rgb(254, 254, 252);
+}
+
+.second-container-img img {
+    width: 800px;
+}
+
+.second-container-text h1 {
     font-size: 35px;
-    font-family: "Dancing Script", cursive;
-  }
-  .banner-image {
-    width: 100%;
+    color: rgb(135, 88, 241);
+    font-weight: bolder;
+    font-size: 50px;
+    font-weight: 800;
+    margin-bottom: 20px;
+    /* background: linear-gradient(180.00deg, rgb(249, 72, 178), rgb(135, 88, 241));
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text; */
+}
+
+.second-container-text p {
+    font-size: 18px;
     margin-top: 10px;
-  }
-  .banner-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-  }
-  .social-media {
+    margin-bottom: 10px;
+}
+
+.our-pourpose {
+    color: rgb(35, 34, 34);
+
+}
+
+.unleash {
+    font-size: 30px;
+    font-weight: 900;
+}
+
+.know-more-btn {
+    padding: 15px 30px;
+    border: none;
+    border-radius: 40px;
+    color: white;
+    background-color: rgb(255, 66, 165);
+    margin-top: 10px;
+    margin: 10px;
+}
+
+
+/* Online game container */
+.online-game-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 90px;
+    margin-top: 60px;
+}
+
+.img-box img {
+    width: 80%;
+}
+
+.online-heading {
     font-size: 40px;
-    display: flex;
-    justify-content: space-between;
-    margin-top: -10px;
-    margin-bottom: 15px;
-  }
-  .button-container {
-    display: flex;
-    justify-content: space-around;
-  }
-  .banner .button-container button {
-    background-color: transparent;
-    border: 2px solid #9376e0;
-    padding: 10px 25px;
-    border-radius: 5px;
-  } */
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.online-heading-desc {
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.online-game-para {
+    color: rgb(120, 129, 134);
+    font-size: 18px;
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+
+.funny-video {
+    font-size: 40px;
+    color: rgb(135, 88, 241);
+    /* background: linear-gradient(180.00deg, rgb(249, 72, 178), rgb(135, 88, 241));
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text; */
+}
+
+#overlay-img {
+    position: relative;
+}
+
+.overlay {
+    position: absolute;
+    text-align: center;
+    top: 35%;
+    left: 30%;
+    color: rgb(255, 66, 165);
+    font-size: 20px;
+}
+.play-icon{
+    font-size: 30px;
+    color: white;
+}
