--- a/responsive.css
+++ b/responsive.css
@@ -85,5 +85,13 @@
         text-align:center;
         
     }
+    /* icon container */
+    .icon-container{
+        display: grid;
+        flex-direction: column;
+        grid-template-columns: repeat(2,1fr);
+        padding: 0;
+        
+    }
 
 }
