--- a/styles.css
+++ b/styles.css
@@ -287,3 +287,44 @@ width: 400px;
 .overlay-img{
     width: 210px;
 }
+
+/* icon section */
+.icon-full-container{
+    background-color: rgb(249, 245, 245);
+}
+.icon-container{
+    display: grid;
+    flex-direction: column;
+    grid-template-columns: repeat(5,1fr);
+    gap: 20px;
+    padding: 100px;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+.icon-box{
+    padding: 5px;
+    width: 225px;
+    background-color: white;
+    border-radius: 40px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+   
+}
+
+.icon-para{
+    font-size: 18px;
+    font-weight: 800;
+}
+.icon-img{
+    width: 40px;
+}
+#icon-box-color{
+    border: 3px solid rgb(249, 72, 178);
+    color: rgb(249, 72, 178);
+}
+.icon-box:hover{
+    cursor: pointer;
+    border: 3px solid rgb(249, 72, 178);
+    color: rgb(249, 72, 178);
+}
