--- a/responsive.css
+++ b/responsive.css
@@ -26,7 +26,7 @@
         background-image: none;
     }
 
-    /* second container */
+    /* online game container*/
     .second-container {
         flex-direction: column;
         text-align: center;
@@ -48,6 +48,10 @@
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         gap: 20px;
+    }
+    .online-game-para {
+        font-size: 16px;
+       
     }
 
     br {
@@ -78,20 +82,82 @@
         width: 170px;
         margin-left: 60px;
     }
-    .instantly-img-container{
-       margin-top: 40px;
+
+    .instantly-img-container {
+        margin-top: 40px;
     }
+
     .instantly-para {
-        text-align:center;
-        
+        text-align: center;
+
     }
+
+
+
     /* icon container */
-    .icon-container{
+    .icon-container {
+        flex-direction: column;
+        grid-template-columns: repeat(3, 1fr);
+        padding: 80px;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    .icon-box {
+        width: 130px;
+
+    }
+
+    .icon-para {
+        font-size: 10px;
+    }
+
+    .icon-img {
+        width: 20px;
+    }
+
+
+
+
+
+
+    /* footer section */
+    .footer-para-1 {
         display: grid;
         flex-direction: column;
-        grid-template-columns: repeat(2,1fr);
-        padding: 0;
-        
+        grid-template-columns: repeat(3, 1fr);
+
+    }
+
+    .footer-para-2 {
+        display: grid;
+        flex-direction: column;
+        grid-template-columns: repeat(3, 1fr);
+        text-align: center;
+        margin-top: 20px;
+        gap: 10px;
+        margin-bottom: 10px;
+    }
+
+    .footer-icons {
+        display: grid;
+        flex-direction: column;
+        grid-template-columns: repeat(3, 1fr);
+        text-align: center;
+
+    }
+
+    .footer-para-2 {
+        display: grid;
+        flex-direction: column;
+        grid-template-columns: repeat(2, 1fr);
+        text-align: center;
+    }
+
+    .footer-para-3 {
+        text-align: center;
+
     }
 
 }
