--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,6 @@
 .header-container {
     display: flex;
     justify-content: space-around;
-    background-image: url('images/Group\ 14.png');
-    background-repeat: no-repeat;
     align-items: center;
 }
 
@@ -74,9 +72,18 @@
     width: 100%;
     margin-right: 100px;
 }
+.banner-desc{
+    height: 500px;
+   width: 600px;
+    background-image: url('images/Group\ 14.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
 .header-description {
-    margin-left: 150px;
+    margin-left: 100px;
+   
+    
 }
 
 .header-description h2 {
